--- a/boards/shields/torabo_tsuki_lp/torabo_tsuki_lp_right.conf
+++ b/boards/shields/torabo_tsuki_lp/torabo_tsuki_lp_right.conf
@@ -8,3 +8,4 @@ CONFIG_ZMK_STATUS_LED=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000000
 CONFIG_ZMK_NON_LIPO_MIN_MV=1000
 CONFIG_ZMK_NON_LIPO_LOW_MV=900
+CONFIG_BT_CTLR_PHY_2M=n
